# claude-companion

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.js  wdio.conf.ts
docs/: app.js  index.html  style.css  theme.js
docs/packs/pane/: animations.css
e2e/: settings_window.spec.ts
scripts/: install-app.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_watcher.rs  dock.rs  hotkeys.rs  ipc.rs  lib.rs  main.rs  memory.rs  occlusion.rs  settings.rs  tray.rs
src/data/: app_comments.json
src/engine/: activity-config.js  activity-config.test.js  app_comments.js  app_comments.test.js  behavior.js  context_menu.js  context_menu.test.js  harness.test.js  hook_reactions.js  hook_reactions.test.js  pack_loader.js  pack_loader.test.js  settings.js  settings.test.js
src/packs/blob/: animations.css  manifest.json  speech.json
src/packs/cat/: animations.css  manifest.json  speech.json
src/packs/ghost/: animations.css  manifest.json  speech.json
src/packs/pane/: animations.css  manifest.json  speech.json
src/packs/sprite/: animations.css  manifest.json  speech.json
src/settings/: index.html  main.js  styles.css
src/settings/tabs/: animation.js  apps.js  companion.js  general.js  integration.js  mode.js
src/styles/: base.css
test/: setup.js  tauri-mock.js
