[package]
name = "claude-companion"
version = "0.1.0"
edition = "2021"

[lib]
name = "claude_companion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSScreen",
    "NSEvent",
    "NSResponder",
    "NSWorkspace",
    "NSRunningApplication",
] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSGeometry", "NSString"] }
core-graphics = "0.24"
core-foundation = "0.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
