[package]
name = "companion"
version = "0.1.0"
edition = "2021"
default-run = "companion"

[lib]
name = "companion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Phase 5 integrations: local HTTP IPC + file-watch for memory reader.
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
notify = "6"
dirs = "5"
arboard = "3"

[[bin]]
name = "companion"
path = "src/main.rs"

[[bin]]
name = "companion-event"
path = "src/bin/companion_event.rs"

[[bin]]
name = "companion-mcp"
path = "src/bin/companion_mcp.rs"

[dev-dependencies]
mockall = "0.13"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSScreen",
    "NSEvent",
    "NSResponder",
    "NSWorkspace",
    "NSRunningApplication",
] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSGeometry", "NSString"] }
core-graphics = "0.24"
core-foundation = "0.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
